GPC/tests/examples/fail/errNeg.gpc


int GPRM::Test::errNeg() {
    
    bool x = true;
    int y = -x;
    return y;

}
